# kale

./: .gitignore  CMakeLists.txt
inc/: ast.h  jit.h  lexer.h  llvm.h  parser.h
src/: codegen.cpp  main.cpp
